# fll_resize_logos

./: CMakeLists.txt
src/: scale.cpp
